# honorarios-interpreting

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.githooks/: pre-commit
.github/workflows/: python-package.yml
config/: email.example.json  gmail.example.json  google-photos.example.json  profile.example.json  profiles.example.json
data/: README.md  court-emails.example.json  known-destinations.json  service-profiles.json
docs/: duplicate-check.md  email-draft-workflow.md  image-metadata-date-rule.md  intake-checklist.md  legalpdf-adapter-contract.md  next-thread-handoff.md  process-optimizations.md  public-release-checklist.md  question-rules.md  template-patterns.md  web-app-roadmap.md
examples/: intake.synthetic.example.json
honorarios_app/: __init__.py  ai_recovery.py  gmail_draft_api.py  personal_profiles.py  runtime.py  services.py  web.py
honorarios_app/static/: app.js  style.css
scripts/: browser_flow_smoke.py  browser_iab_smoke.mjs  build_email_draft.py  build_packet_pdf.py  build_public_candidate.py  check_duplicate.py  create_intake.py  entity_rules.py  generate_pdf.py  intake_questions.py  isolated_app_smoke.py  legalpdf_adapter_caller.py  local_app_smoke.py  prepare_honorarios.py  public_release_gate.py  public_repo_gate.py  record_gmail_draft.py  request_identity.py  runtime_doctor.py  source_classification.py
templates/: interprete_requerimento.html
tests/: test_browser_iab_smoke.py  test_public_candidate_smoke.py  test_public_repo_gate.py
(+1 files in other folders)
