[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honorarios-interpreting"
version = "0.1.0"
description = "Local-first web app for Portuguese interpreting honorários PDF requests and Gmail draft payloads."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "reportlab>=4.2.0",
  "pypdf>=5.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "Pillow>=10.0.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
honorarios-web = "honorarios_app.web:main"

[tool.setuptools]
packages = ["honorarios_app"]

[tool.setuptools.package-data]
honorarios_app = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
